fix(Open): Prevent content jumping around due to animated header text

--- a/director/assets/sass/styles.sass
+++ b/director/assets/sass/styles.sass
@@ -232,6 +232,10 @@ h6.has-top-margin
   margin-bottom: 1rem
   margin-right: .5rem
 
+#informat-example
+    background-color: rgba($success, .16)
+    padding: 2px 4px
+
 .open-feature-list
   .columns
     margin-top: 1.5rem
